Temporarily Done with the styling part

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
         </div>
         <!-- Buttons -->
         <div class="button-container">
-            <button class="twitter-button" id="twitter" title="Twitter">
-                <i class="fab fa-twitter"></i>
-            </button>
+            <div class="social-buttons">
+                <button class="facebook-button" id="facebook" title="Facebook">
+                    <i class="fab fa-facebook"></i>
+                </button>
+                <button class="twitter-button" id="twitter" title="Twitter">
+                    <i class="fab fa-twitter"></i>
+                </button>
+                <button class="instagram-button" id="instagram" title="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </button>
+            </div>
+
             <button id="new-quote">
                 New Quote
             </button>
