--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
             <span class="quote" id="quote">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, nulla?
             </span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Lorem</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -45,6 +44,7 @@
     </div>
     <!-- Script -->
     <script src="script.js"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
 </body>
 
 </html>
