Added the loader

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             </button>
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
