added the facebook sharing functionality

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
                 <button class="twitter-button" id="twitter" title="Twitter">
                     <i class="fab fa-twitter"></i>
                 </button>
-                <button class="instagram-button" id="instagram" title="Instagram">
-                    <i class="fab fa-instagram"></i>
-                </button>
             </div>
 
             <button id="new-quote">
@@ -45,7 +42,7 @@
     <!-- Loader -->
     <div class="loader" id="loader"></div>
     <!-- Script -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js" ></script>
 </body>
 
